# plutus

./: .gitignore  README.md  cabal.project  cabal.project.old  config.json
digitalis-contracts/: digitalis-contracts.cabal
digitalis-contracts/app/: write_datums.hs  write_redeemers.hs  write_validators.hs
digitalis-contracts/src/: Orphans.hs
digitalis-contracts/src/Administration/BMAT/: Policy.hs
digitalis-contracts/src/Administration/CAT/: Policy.hs  Types.hs
digitalis-contracts/src/Administration/ContractsController/: Types.hs  Validator.hs
digitalis-contracts/src/DNS/DNSMinter/: Policy.hs  Types.hs
digitalis-contracts/src/DNS/DNSReference/: Types.hs  Validator.hs
digitalis-contracts/src/DNS/DRAT/: Policy.hs  Types.hs
digitalis-contracts/src/Marketplace/EnglishAuction/: Types.hs  Validator.hs
digitalis-contracts/src/Marketplace/MHABAT/: Policy.hs  Types.hs
digitalis-contracts/src/Marketplace/MintingDNSAuction/: Types.hs  Validator.hs
digitalis-contracts/src/Marketplace/VABAT/: Policy.hs  Types.hs
digitalis-contracts/src/Marketplace/VickreyAuction/: Types.hs  Validator.hs
digitalis-contracts/src/Staking/: Types.hs  Validator.hs
digitalis-contracts/src/Treasury/MainTreasury/: Types.hs  Validator.hs
digitalis-contracts/src/Utils/: Address.hs  ExBudget.hs  LazyScriptContext.hs  String.hs  ToJSON.hs  WriteValidator.hs
utils/scripts/: addTLD.sh  initialization.sh
utils/scripts/digitalis_platform_scripts/: 1_MintingDNS.sh  2_Bidding.sh  3_Updating.sh  4_BidDisclosure.sh  5_DNSRedeeming.sh  6_BidClaiming.sh  7_DNSRefUpdating.sh
utils/scripts/env/: contractsInfo.conf  general.conf  wallets.conf
utils/scripts/general_scripts/: create-all-wallets.sh  createBoardMembersUTxOs.sh  createCATRefScript.sh  createContractsControlRefScript.sh  createDigitalisRefScriptUTxOs.sh  createDigitalisValidators.sh  createTLDRefScriptUTxOs.sh  createTLDValidators.sh  removeTLDAllRefScriptUTxOs.sh
